further sec 4 edits

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 }
 
 \usepackage{tabularx}
+\usepackage{graphicx}
 \usepackage{array}
 \usepackage{booktabs} % for nice rules/lines in tables
 \usepackage{arydshln} % for dashed lines in tables
@@ -42,6 +43,8 @@
 	\end{center}
 }
 
+
+\newcommand{\demon}{{DEMON}~}
 \usepackage{amssymb}
 \usepackage{bm}
 \usepackage{mathtools}
