--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -228,6 +228,9 @@ where $N$ is the number of nodes in the network induced by $C$.
 
 Note that the metrics we have selected are a superset of those indicated in recent studies on online activism, namely \cite{Lotan2011} and \cite{Poell2014}, and thus support our empirical evaluation, described in Sec.~\ref{sec:evaluation}.
 
+
+\anote{Summary of user features if space allows}
+
 %%%%%%%%%%%%%%%%%%%%
 \section{Incremental User Discovery} \label{sec:Pipeline}
 %%%%%%%%%%%%%%%%%%%%
@@ -249,11 +252,10 @@ The pipeline structure and data flow are illustrated in Fig. ~\ref{fig:twitterfr
 
 \subsection{Harvesting Content and Creating Context networks}  \label{sec:harvesting}
 
-Firstly, all Twitter posts $P(C)$ that satisfy the criteria set in $C$ are retrieved, using either the Search or the Streaming Twitter APIs.\footnote{Repeat queries are required to get around the well-known Twitter API limitations for retrieving tweets.}
-
+Firstly, all Twitter posts $P(C)$ that satisfy the criteria set in $C$ are retrieved, using either the Search or the Streaming Twitter APIs.\footnote{Repeat queries and multiple accouts are used to get around the well-known Twitter API limitations for retrieving tweets.}
+%
 Secondly, the context network $G_C$ is generated as defined in Sec.~\ref{sec:contexts}. To recall, this is a directed network representing retweet and/or mention interactions between pairs of users in $C$. 
-The size of the network is largely determined by the nature of the context, and may range from a few \hl{XX} users for a small context such as a local awareness event, to \hl{XX} users for a large national event that extends over a long timeframe, such as a political election campaign.
-
+The size of the network is largely determined by the nature of the context, and  ranges between 140 and 400 users (avg 254, see Table~\ref{tab:networks}).
 
 \subsection{Community detection}  \label{sec:communities}
 
@@ -262,16 +264,16 @@ The goal of this partitioning is to further narrow the scope for the topology-se
 and thus to enable weak-signal users to emerge relative to other more globally dominant users.
 %
 Many different approaches have been proposed to discover virtual communities in social networks. 
-We have chosen {DEMON}~\cite{Coscia:2012:DLD:2339530.2339630} because it allows communities to overlap to a degree that is tunable, making it an ideal feature to identify users who may be active in more than one community within the same context, i.e., a social event or a campaign.
+We have chosen \demon~\cite{Coscia:2012:DLD:2339530.2339630} because it allows communities to overlap to a degree that is tunable, making it an ideal feature to identify users who may be active in more than one community within the same context, i.e., a social event or a campaign.
 
-{DEMON} identifies communities that a person belongs to with \textit{ego networks}, which consists of an individual, called the ego, and all the persons the ego has a social relationship with. 
+\demon identifies communities that a person belongs to with \textit{ego networks}, which consists of an individual, called the ego, and all the persons the ego has a social relationship with. 
 As each ego network considers a node and its neighbours only, it provides a local method for discovering user affiliations, thus more akin to a social context.
 %
 It has been suggested~\cite{Arnaboldi2013} that ego networks are a useful model not only to describe social relationships amongst people offline, but also the structure of their online connections. 
-Recognising that any individual may have different types of social relationships with different people (i.e., family, friends, colleagues, etc.),  {DEMON}  naturally allows for an individual to participate in multiple communities. 
+Recognising that any individual may have different types of social relationships with different people (i.e., family, friends, colleagues, etc.),  \demon  naturally allows for an individual to participate in multiple communities. 
 
 The locality principle of ego networks translates into an efficient algorithm for discovering overlapping communities in a social graph. 
-Specifically, {DEMON} operates on one node $v$ at a time in our context network $G_C$.
+Specifically, \demon operates on one node $v$ at a time in our context network $G_C$.
 
 It applies a \textit{label propagation} algorithm to each neighbour $v'$ of $v$, as follows. First, a new label $l$, which identifies a new community, is tentatively assigned to $v'$. 
 	Then, with probability $\alpha$ $v'$ changes its label to that of the majority of its own neighbours. 
@@ -329,96 +331,118 @@ While the process ends naturally when no new contexts are uncovered from the pre
 
 \section{Empirical Evaluation} \label{sec:evaluation}
 
-We have clarified in the introduction that our approach to discovering interesting users is \textit{unsupervised}, as the usual approach of having experts manually generate ground truth is vulnerable to the subjectivity of the experts. Thus, the evaluation would simply be measuring the fit of the model to the specific experts' own opinion. 
-Instead, our pipeline creates a feature-rich database of online profiles that are pre-selected according to specific topological properties in order to filter out background noise, but are otherwise objectively represented and ready to be mined using any user-defined function of the available features.
+The typical approach to identifying specific classes on online users relies on expert-generated ground truth, i.e., to determine which users belong to the desired class. 
+Such approach, however, is vulnerable to  the subjectivity of the experts, whereby the evalution would  be measuring the fit of the model to the specific experts' own opinion. 
+In contrast, we follow an \textit{unsupervised} approach where there is no a priori knowledge of user relevance.  
+We aim to demonstrate the value of our pipeline in creating a database of online profiles, pre-selected according to specific topological properties in order to filter out background noise,  along with a community-accepted set of engineered features that are ready to be mined using any user-defined function.
 
-Thus, our evaluation shows that the process is effective in building up such a database, by (i) showing the pipeline in action on a significant set of contexts, and (ii) demonstrating user-defined ranking functions that operate on the resulting database.
-Specifically, we  start by manually selecting meaningful contexts from the same social domain, namely public healthcare campaigns, to demonstrate network construction, breakdown of each  context network into communities, and harvesting of users from each community, along with their metrics.
-We then provide examples of ranking functions that we believe to capture the notion of  \textit{online activists}, and we empirically validate them by inspecting the profiles of representative top-k users.
+Thus, our evaluation (i) shows the pipeline in action on a significant set of contexts, and (ii) demonstrates useful ranking functions that operate on the resulting database.
+Specifically, we  start by manually selecting homogeneous contexts from a single social domain, namely public healthcare campaigns, to demonstrate network construction, breakdown of each  context network into communities, and harvesting of users from each community, along with their metrics.
+We then provide examples of ranking functions aimed at capturing the notion of  \textit{online activists}, and we empirically validate them by inspecting the profiles of representative top-k users.
 
- \subsection{Contexts, networks, and communities}  \label{sec:contexts}
+ \subsection{Contexts and networks}  \label{sec:contexts}
  
-
- We have manually selected 25 contexts within the scope of healthcare campaigns in the UK, all occurring in 2018 (Table~\ref{tab:contexts}). 
- Table~\ref{tab:networks-summary} provides summary statistics for  the corresponding user-user networks constructed by harvesting posts for each context.
-Contexts are either time-limited events or public health awareness campaigns, and are well-characterised using predefined hashtags as shown in the Table.
-
-Next, we report on the effect of the two community detection algorithms mentioned earlier, namely \textit{Demon} and \textit{Girwan-Newman}, on each of the networks. 
-As we can see, Demon either identifies a very small number of small communities, and only retains users who belong to at least one community, or it ``disintegrates'' the network into degenerate, one-node communities. 
-In this latter case, our pipeline disregards the communities and computes the users' topological metrics on the whole network.
-In order to decide whether the comunities are usable, we use a number of metrics that quantify partition quality, namely  the \textit{internal density} and \hl{XXX}.
-
-\anote{comment on Girwan-Newman when data becomes available}
+ We have manually selected 25 contexts within the scope of health awareness campaigns in the UK, all occurring in 2018, all well-characterised using predefined hashtags.
+ Table~\ref{tab:contexts}) lists the events along with key metrics for their corresponding user-user networks. 
+To recall, \textit{assortativity} measures how frequently nodes are likely to connect to other nodes with the same degree (>0) or with a different degree (<0). 
+Negative figures (mean: -0.22, std dev: 0.17) are in line with what is observed on the broader Twitter network \hl{add ref-about-assortativity-in-Twitter}.
+%
+The very small figures for density (mean: 0.004, std dev: 0.002), defined as $\frac{\#edges }{\mathit{\mathit{\#nodes}} (\mathit{\#nodes} -1)}$, suggest very few connections exist amongst users within a context. 
+This makes it difficult to detect meaningful communities, as described below, thus for some context the topological metrics are measured on the entire network as opposed to within each community.
+This view is also supported by the average node degree (mean: 2.04, std dev: 0.46) and the ratio of strongly connected components to the number of nodes (mean: 0.98, std. dev. 0.02).
 
 \begin{table}
-\begin{center}
-	\includegraphics[width=0.7\linewidth]{figures/summary-events}
-	\end{center}
-
-\anote{omit location as it's all UK}		
-	\caption{List of contexts used in the experiments}
+	
+	\anote{content for this comes from cell [5] and cell [6] table 2 and cell [8]}
+	
+	\resizebox{\textwidth}{!}{%
+		\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex} \textbf{Context name} &  \textbf{start date} & \textbf{end date}  & \textbf{hashtags} & \textbf{assortativity} & \textbf{avg degree} & \textbf{density} & \textbf{edges} & \textbf{nodes} & \textbf{scc / nodes} & \textbf{communities / nodes} \\ 
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex} 16-days-of-action-2018  &  11-25&	12-10	& 	[\#16days, \#16daysofaction, \#16daysofactiontool...] & -0.1319 &  1.7626	 &  0.0022	 & 349 & 396 &  0.99 & 0\\ 
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  elf-day &	12-03	& 12-12	&	[\#elfday, \#elfday2018] &  -0.1822	 &  2.3890	 & 0.0033	& 436	& 365	& 0.98  & 0.125 \\ 
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  dry-january-2018	& 01-01	& 01-31	&	[\#dryjanuary] & -0.2833	 &  1.9915	& 0.0043	& 234	& 235	& 0.982979 & 0.25 \\ 
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  cervical-cancer-prevention-week-2018	& 01-21	& 01-27	& 	[\#cervicalcancer]&  -0.0909	 &  1.8373	& 0.0044	& 192	& 209	& 0.976077 & 0.18 \\ 
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  time-to-talk-day-2018	& 02-06	& 02-07	& [\#timetotalk]&  -0.2489	 &  1.7239	& 0.0032	& 231	& 268	& 0.988806 & 0.2 \\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  eating-disorder-awareness-week-2018	& 02-25	& 03-03	&	[\#edaw18, \#edaw2018, \#eatingdisordersawareness...]  &  -0.1544 & 1.8828	& 0.0037	& 241	& 256 & 0.988281 & 0.25 \\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  rare-disease-day-2018	& 02-28	& 03-01	& 	[\#rarediseaseday]&  -0.2443	 & 1.4014 & 0.0024	& 206	& 294 & 1.000000 & 0\\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  ovarian-cancer-awareness-month-2018	& 03-01	& 03-31	& 	[\#ovariancancer, \#ovariancancerawareness]  &  -0.3707	 & 1.8791	& 0.0044	& 202	& 215	& 0.986047 & 0\\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  nutrition-and-hydration-week-2018	& 03-11	& 03-17	&	[\#nutritionandhydrationweek, \#NHW2018]&  -0.2841	 &  2.3883	& 0.0044	& 326	& 273	& 0.985348 & 0.12\\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  brain-awareness-week-2018	& 03-11	03-17	& 2018-03-17 &	[\#brainawarenessweek, \#brainweek]& -0.0818	 &  1.8306	& 1.9349	& 281	& 307	& 0.996743 & 0 \\
+			\hline 
+			\rule[-1ex]{0pt}{2.5ex}  &  &  &  &  & & & & & & \\ 
+			\hline 
+	\end{tabular}}
+	
+	\anote{add missing data from the original tables}
+	\caption{List of contexts used in the experiments along with network metrics and count of \demon communities}
 	\label{tab:contexts}
 \end{table}	 
 
 
-\begin{table}
-	\begin{center}
-		\includegraphics[width=0.7\linewidth]{figures/summary-events-graphs.png}
-	\end{center}
-	
-		Summary of networks, retain these metrics   \\
-	(min, max, avg, std dev) for no\_edges, 	no\_nodes, density, avg\_degree, assortativity\\
-	
-	use a different way to report SSC: SSC as counted here have no meaning, what matters is the ratio of SSC to no_nodes	
-	
-	\caption{Summary statistics for the user-user networks for all the contexts in Table~\ref{tab:contexts}}
-	\label{tab:networks}
-\end{table}	 
+\subsection{Communities}  \label{sec:communities}
 
+Next, we report on the effect of the two community detection algorithms mentioned earlier, namely \demon and \hl{\textit{Girwan-Newman}}, on each of the networks. 
+As we can see, within each network \demon either identifies a very small number of small communities, where it only retains users who belong to at least one community, or it ``disintegrates'' the network into degenerate, one-node communities. 
+One-node communities are ignored by the pipeline. Whenever a network is broken down into one-node communities, the whole network is considered in users' in-degree calculations.
+The rightmost column in Table~\ref{tab:contexts} reports the ratio of the number of communities to number of nodes in each of the networks.
 
+Overall, \demon finds meaningful communities in 48\% of the networks, with 1.92 communities per network on average. 
+As mentioned, when communities are meaningful, only users who belong to at least one community are added to the database. 
+On average, for these networks this is 6\% of users.
+In terms of connectedness and assortativity, unsurprisingly individual \demon communities are in line with the average for their parent networks, i.e., slightly negative average assortativity (details omitted due to space constraints).
 
-\begin{table}
-\begin{center}
-	
-	\includegraphics[width=0.7\linewidth]{figures/summary-networks-stats}
-\end{center}
-		fraction of networks that ``disintegrate'' into atomic commuities using Demon\\
-		fraction of networks that are broken down into meaningful  communities \\
-		avg number of communities per network (for the good ones) \\
-		avg fraction of users that survive as community members\\
-		summary of community quality metrics to show how we can set a threshold and automatically reject poor communities 		
-	\caption{Summary statistics of communities extracted from the context networks}
-	\label{tab:commiunities}
-\end{table}	 
+%   cell [9]  not to be used
 
+\anote{cell [10]: think about how to comment on histogram or omit altogether}
+
+\anote{add report on Girwan-Newman communities }
 
 \subsection{Users discovery}  \label{sec:users}
 
+Finally, from each context we have extracted users who are either part of a community, or in the case of non-meaningful communities, all users in the network.
+Using these criteria, a total of 3576 users has been added to the database from 25 contexts.
+We are interested in tracking users' presence across more than one context, and in the specification of ranking functions that let specific user profiles emerge.
 
-\anote{3576 users}
+Regarding user presence, we found that there are 160 users who appear at least in two contexts. 
+After community detection, only a fraction of these users survive. 
+These are either users who belong to a meaningful community, or users who belong to a context network where communities could not be identified.
 
-Finally, from each context we extract all users who are either part of a community, or in the case of non-meaningful communities, all users in the network.
-Using these criteria, a total of \hl{XX} users has been added to the database.
-It is interesting to note that out of those, 160 users appear in more than one context. 
-Of those, 115 are found within the entire context network, and 45 are selected as being part of (at least) one community.
-Overall, 5 repeat users appear in 4 different contexts, 18 appear in 2 contexts, and the remaining 137 appear in two contexts (all other users only appear in one context).  
-Table~\ref{tab:repeat-users} reports the top repeat users with a brief description of their profile. 
+This filtering process results in 45 of the 160 users still seen as repeat users, while the remaining 115 are either removed altogether, or they only appear once. 
+Out of these, 41 appear twice, and 4 appear three times. 
+Thus, only 1.2\% of users appear more than once when communities are considered, compared to the overall 4.5\% repeat users.
+%
+Table~\ref{tab:repeat-users} reports the top repeat users along with their \textit{Follower Rank}.  \anote{comment on whether these are individuals or well-known organisations}
+\anote{can we sort these by no-participation and follower-rank??}
+%
+Fig.~\ref{fig:repeat-users-frequency} shows the number of repeat users per context. 
 
-The chart in Fig.~\ref{fig:repeat-users-frequency} shows the number of repeat users per context. 
-
-\anote{comment on whether these are individuals or well-known organisations}
 
 \begin{table}
 	\centering
-	\framebox{table content here}
+	\framebox{\anote{content from cell [13]} }
+	
+	
 	\caption{Top-k repeat users, amongst those identified as belonging to some community.}
-	\label{tab:networks}
+	
+	\label{tab:repeat-users}
 \end{table}	 
+
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.7\linewidth]{figures/repeat-users-frequency}
-	\caption{Number of repeat users broken down by context}
+	\includegraphics[width=1\linewidth]{figures/repeat-users-frequency}
+	\caption{Number of repeat users for each context}
 	\label{fig:repeat-users-frequency}
 \end{figure*}
 
