Updates from ShareLaTeX

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -18,7 +18,7 @@
 Paolo Missier\inst{1}\orcidID{0000-0002-0978-2446} \and
 Alexander Romanovsky\inst{1} \and
 Mickael Figueredo\inst{2} \and
-Nelio Azevedo Cacho\inst{2}}
+Nelio Cacho\inst{2}}
 
 %
 \authorrunning{F. Primo et al.}
