--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 %
-\title{Fantastic activists and how to find them\thanks{} \\ \small (not the real title)}
+\title{Building a customisable pipeline for continuously harvesting socially-minded Twitter users: how and why\thanks{}}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
